feat: ensure LoadAuthorByName call findByName method on repository